--- a/src/main/resources/aplication.properties
+++ b/src/main/resources/aplication.properties
@@ -10,3 +10,6 @@ spring.jpa.hibernate.ddl-auto=drop
 
 # Configuração da JPA
 spring.jpa.show-sql=true
+
+# Secret do Token
+api.security.token.secret=${JWT_SECRET:meusegredosecreto}
